fix: handle uncategorized theory lessons and fix network errors